--- a/css/main.css
+++ b/css/main.css
@@ -1188,6 +1188,7 @@ input[type=number] {
   max-width: 600px;
   font-size: 30px;
   line-height: 43px;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 575.98px) {
