--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -56,6 +56,7 @@
             max-width: 600px;
             font-size: 30px;
             line-height: 43px;
+            margin-bottom: 30px;
             
             @media screen and (min-width: $phone) {
                 font-size: 60px;
@@ -131,7 +132,4 @@
             display: block;
            }
 		}
-.title-1 {
-}
-
 }
